[feature] add modal promo code
i add modal for promo code

--- a/app/views/shared/_marketing.html.slim
+++ b/app/views/shared/_marketing.html.slim
@@ -1,2 +1,3 @@
 = render :partial => '/shared/email_capture_modal'
 = render :partial => 'modals/modal_20150715_polyvore'
+= render :partial => 'modals/modal_promocode'
