catch instagram user click close and overlay bg event

--- a/app/views/modals/_modal_promocode.html.slim
+++ b/app/views/modals/_modal_promocode.html.slim
@@ -26,7 +26,8 @@ ruby:
           container: "#modal-popup-content-template.polyvore_201507_modal",
           timeout: 7,
           timer: false,
-          force: false
+          force: false,
+          instagram_campaign: true
         });
 
         polyvore_popup.success = function (data) {
