--- a/app/assets/stylesheets/redesign/landing-page-mobile.css.scss
+++ b/app/assets/stylesheets/redesign/landing-page-mobile.css.scss
@@ -1,7 +1,9 @@
 .landing-page-header {
-  width: 90%;
-  margin-top: 90px;
-  margin-bottom: 35px;
+  img{
+    width: 90%;
+    margin-top: 90px;
+    margin-bottom: 35px;
+  }
 }
 
 .pinkRow{
@@ -19,7 +21,7 @@
     border:none;
   }
 }
-.landing-page-tip1 {
+.landing-page-tip1-variant-1 {
 
   padding-top:40px;
   padding-bottom:40px;
@@ -39,8 +41,28 @@
     width: 575px;
   }
 }
+.landing-page-tip1-variant-2 {
 
-.landing-page-tip2 {
+  padding-top:40px;
+  padding-bottom:40px;
+  padding-left:15px;
+  @media(max-width: 320px){
+    width: 300px;
+  }
+  @media(min-width: 321px)and(max-width: 599px){
+    width: 340px;
+  }
+  @media(min-width: 600px)and(max-width: 767px)
+  {
+    width: 530px;
+  }
+  @media(min-width: 768px)
+  {
+    width: 650px;
+  }
+}
+
+.landing-page-tip2-variant-1 {
   padding-top:40px;
   padding-bottom:40px;
   padding-left:15px;
@@ -60,7 +82,27 @@
   }
 }
 
-.holydress {
+.landing-page-tip2-variant-2 {
+  padding-top:40px;
+  padding-bottom:40px;
+  padding-left:15px;
+  @media(max-width: 320px){
+    width: 300px;
+  }
+  @media(min-width: 321px)and(max-width: 599px){
+    width: 340px;
+  }
+  @media(min-width: 600px)and(max-width: 767px)
+  {
+    width: 530px;
+  }
+  @media(min-width: 768px)
+  {
+    width: 650px;
+  }
+}
+
+.holydress-variant-1 {
   position: absolute;
   width: 80px;
   margin-top: 255px;
@@ -92,6 +134,45 @@
     margin-top: 465px;
     width: 115px;
     margin-left: 610px;
+  }
+}
+
+
+.holydress-variant-2 {
+  position: absolute;
+  width: 80px;
+  margin-top: 255px;
+  margin-left: 270px;
+  @media(max-width: 320px){
+    width: 80px;
+    margin-top: 240px;
+    margin-left: 210px;
+  }
+  @media(min-width: 321px)and(max-width: 413px){
+    margin-top: 260px;
+    width: 95px;
+    margin-left: 250px;
+  }
+  @media(min-width: 414px)and(max-width: 599px){
+    margin-top: 270px;
+    width: 100px;
+    margin-left: 265px;
+  }
+  @media(min-width: 600px)and(max-width: 767px){
+    margin-left: 410px;
+    margin-top: 350px;
+    width: 130px;
+  }
+  @media(min-width: 768px)and(max-width: 799px)
+  {
+    margin-left: 520px;
+    margin-top: 430px;
+    width: 140px;
+  }
+  @media(min-width: 800px){
+    margin-left: 535px;
+    margin-top: 430px;
+    width: 145px;
   }
 }
 
