--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -3,32 +3,28 @@
 .container-fluid
   a(href="http://www.fameandpartners.com/dresses/dress-holly-493?color=black")
     .span
-      = image_tag("#{asset_path}/holydress.png", class: 'holydress')
+      = image_tag("#{asset_path}/holydress.png", class: "holydress-variant-#{params[:variant] || 1}")
   .row
     center
-      = image_tag("#{asset_path}/header.png", class: "landing-page-header")
+      = link_to image_tag("#{asset_path}/header.png"), @blogger_link, class: "landing-page-header"
   .row.pinkRow
-    = image_tag("#{asset_path}/tip1.png", class: "landing-page-tip1")
+    = image_tag("#{asset_path}/tip1.png", class: "landing-page-tip1-variant-#{params[:variant] || 1}")
   .row
-    = image_tag("#{asset_path}/tip2.png", class: "landing-page-tip2")
+    = image_tag("#{asset_path}/tip2.png", class: "landing-page-tip2-variant-#{params[:variant] || 1}")
   .row
     = image_tag("#{asset_path}/shopthislook.png", class: "shopthislook")
   .row
     = image_tag("#{asset_path}/tip3.png", class: "landing-page-tip3")
 
-  - @products = Revolution::ProductService.new(['587','566','479'], current_site_version).spree_products
   .row
     center
-      - @dress1_link = "http://www.fameandpartners.com/dresses/dress-melanie-two-piece-587?color=white"
-      - @dress2_link = "http://www.fameandpartners.com/dresses/dress-chevron-two-piece-566?color=burgundy"
-      - @dress3_link = "http://www.fameandpartners.com/dresses/dress-azalea-floral-two-piece-479?color=pink-azalea-floral"
-      = link_to image_tag("#{asset_path}/firstdress.jpg"), @dress1_link, class: 'dress-3'
-      = link_to image_tag("#{asset_path}/seconddress.jpg"), @dress2_link, class: 'dress-3'
-      = link_to image_tag("#{asset_path}/thirddress.jpg"), @dress3_link, class: 'dress-3'
+      = link_to image_tag("#{asset_path}/firstdress.jpg"), @three_products_dress1_link, class: 'dress-3'
+      = link_to image_tag("#{asset_path}/seconddress.jpg"), @three_products_dress2_link, class: 'dress-3'
+      = link_to image_tag("#{asset_path}/thirddress.jpg"), @three_products_dress3_link, class: 'dress-3'
       div.linkarea
-        = link_to "", @dress1_link, class: "item"
-        = link_to "", @dress2_link, class: "item"
-        = link_to "", @dress3_link, class: "item"
+        = link_to "", @three_products_dress1_link, class: "item"
+        = link_to "", @three_products_dress2_link, class: "item"
+        = link_to "", @three_products_dress3_link, class: "item"
   .row
     = image_tag("#{asset_path}/tip4.png", class: "landing-page-tip4")
   .row
@@ -37,77 +33,66 @@
     center
       = image_tag("#{asset_path}/myfavouritedresses.jpg", class: "landing-page-myfavouritedresses")
 
-  - @products = Revolution::ProductService.new(['495','575','582','573','599','508','580','602'], current_site_version).spree_products
-
-
-  - @dress1_link = "http://www.fameandpartners.com/dresses/dress-emma-kate-495?color=white"
-  - @dress2_link = "http://www.fameandpartners.com/dresses/dress-ophelia-575?color=surreal-floral-white"
-  - @dress3_link = "http://www.fameandpartners.com/dresses/dress-mirabella-582?color=merlot"
-  - @dress4_link = "http://www.fameandpartners.com/dresses/dress-juli-two-piece-573?color=black"
-  - @dress5_link = "http://www.fameandpartners.com/dresses/dress-monochrome-moon-599?color=monochrome"
-  - @dress6_link = "http://www.fameandpartners.com/dresses/dress-elegant-angel-508?color=white"
-  - @dress7_link = "http://www.fameandpartners.com/dresses/dress-summer-angel-580?color=ice-blue"
-  - @dress8_link = "http://www.fameandpartners.com/dresses/dress-boho-breeze-602?color=watercolour"
 
   .row
     span.landing-page-image-left
-      = link_to @dress1_link do
+      = link_to @eight_products_dress1_link do
         center
-          = cropped_product_hoverable_image_tag(@products[0])
+          = cropped_product_hoverable_image_tag(@eight_products[0])
       .details.text-center
-        span.name = @products[0].name
-        span.price = price_for_product(@products[0])
+        span.name = @eight_products[0].name
+        span.price = price_for_product(@eight_products[0])
     span.landing-page-image-right
-      = link_to @dress2_link do
+      = link_to @eight_products_dress2_link do
         center
-          = cropped_product_hoverable_image_tag(@products[1])
+          = cropped_product_hoverable_image_tag(@eight_products[1])
       .details.text-center
-        span.name = @products[1].name
-        span.price = price_for_product(@products[1])
+        span.name = @eight_products[1].name
+        span.price = price_for_product(@eight_products[1])
   .row
     span.landing-page-image-left
-      = link_to @dress3_link do
+      = link_to @eight_products_dress3_link do
         center
-          = cropped_product_hoverable_image_tag(@products[2])
+          = cropped_product_hoverable_image_tag(@eight_products[2])
       .details.text-center
-        span.name = @products[2].name
-        span.price = price_for_product(@products[2])
+        span.name = @eight_products[2].name
+        span.price = price_for_product(@eight_products[2])
     span.landing-page-image-right
-      = link_to @dress4_link do
+      = link_to @eight_products_dress4_link do
         center
-          = cropped_product_hoverable_image_tag(@products[3])
+          = cropped_product_hoverable_image_tag(@eight_products[3])
       .details.text-center
-        span.name = @products[3].name
-        span.price = price_for_product(@products[3])
+        span.name = @eight_products[3].name
+        span.price = price_for_product(@eight_products[3])
   .row
     span.landing-page-image-left
-      = link_to @dress5_link do
+      = link_to @eight_products_dress5_link do
         center
-          = cropped_product_hoverable_image_tag(@products[4])
+          = cropped_product_hoverable_image_tag(@eight_products[4])
       .details.text-center
-        span.name = @products[4].name
-        span.price = price_for_product(@products[4])
+        span.name = @eight_products[4].name
+        span.price = price_for_product(@eight_products[4])
     span.landing-page-image-right
-      = link_to @dress6_link do
+      = link_to @eight_products_dress6_link do
         center
-          = cropped_product_hoverable_image_tag(@products[5])
+          = cropped_product_hoverable_image_tag(@eight_products[5])
       .details.text-center
-        span.name = @products[5].name
-        span.price = price_for_product(@products[5])
+        span.name = @eight_products[5].name
+        span.price = price_for_product(@eight_products[5])
   .row
     span.landing-page-image-left
-      = link_to @dress7_link do
+      = link_to @eight_products_dress7_link do
         center
-          = cropped_product_hoverable_image_tag(@products[6])
+          = cropped_product_hoverable_image_tag(@eight_products[6])
       .details.text-center
-        span.name = @products[6].name
-        span.price = price_for_product(@products[6])
+        span.name = @eight_products[6].name
+        span.price = price_for_product(@eight_products[6])
     span.landing-page-image-right
-      = link_to @dress8_link do
+      = link_to @eight_products_dress8_link do
         center
-          = cropped_product_hoverable_image_tag(@products[7])
+          = cropped_product_hoverable_image_tag(@eight_products[7])
       .details.text-center
-        span.name = @products[7].name
-        span.price = price_for_product(@products[7])
+        span.name = @eight_products[7].name
+        span.price = price_for_product(@eight_products[7])
   .row
     = link_to image_tag("#{asset_path}/bohemium.jpg"), "http://www.fameandpartners.com/lookbook/bohemian-summer", class: "landing-page-bohemium"
