add two banners on top

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -121,6 +121,18 @@ ruby:
               span.hidden-sm.hidden-xs.hidden-xxs cart:
               span#cart-item-count 0
 
+    .banner-top
+      center
+        div#wantToShop
+          | WANT TO SHOP 15% OFF LATER?
+        div#emailPromoCodeButton
+          a.btn.btn-facebook.btn-black.btn-md
+            | EMAIL YOUR PROMO CODE
+    .banner-top#promoSent
+      center
+        | Your promo code has been sent to the email attached to your Facebook account. <b>ENJOY!</b>
+
+
 #sideMenu
   nav.navbar.navbar-default.visible-xs.visible-sm
     .navbar-header
