--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -1,6 +1,6 @@
 - asset_path = "//#{configatron.asset_host}/pages/instagram/#{params[:variant] || 1}"
 
-.container-fluid
+.container-fluid#instagram-landing-201507
   a(href="http://www.fameandpartners.com/dresses/dress-holly-493?color=black")
     .span
       = image_tag("#{asset_path}/holydress.png", class: "holydress-variant-#{params[:variant] || 1}")
