--- a/app/views/shared/_marketing.html.slim
+++ b/app/views/shared/_marketing.html.slim
@@ -1,3 +1,3 @@
 = render :partial => '/shared/email_capture_modal'
 = render :partial => 'modals/modal_20150715_polyvore'
-= render :partial => 'modals/modal_promocode'
+= render :partial => 'modals/modal_20150724_instagram_notify'
