fix firefox bug

--- a/app/assets/transient_content/20150724_instagram/stylesheets/20150724_instagram_modal.css.scss
+++ b/app/assets/transient_content/20150724_instagram/stylesheets/20150724_instagram_modal.css.scss
@@ -3,8 +3,7 @@
 
 
     background-color:      #ffffff;
-    background-position-y: 25px;
-    background-position-x: center;
+    background-position: center 25px;
     background-image: url('modals/instagram_rhombus.png');
     background-repeat: no-repeat!important;;
     min-width:        60% !important;
