--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -1,7 +1,7 @@
 - asset_path = "//#{configatron.asset_host}/pages/instagram/#{@page_variant}"
 
 .container-fluid#instagram-landing-201507
-  a(href="http://www.fameandpartners.com/dresses/dress-holly-493?color=black")
+  a(href=@holy_dress_link)
     .span
       = image_tag("#{asset_path}/holydress.png", class: "holydress-variant-#{@page_variant}")
   .row
