--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -3,7 +3,7 @@
 .container-fluid#instagram-landing-201507
   a(href=@holy_dress_link)
     .span
-      = image_tag("#{asset_path}/holydress.png", class: "holydress-variant-#{@page_variant}")
+      = image_tag("#{asset_path}/featured-dress.png", class: "holydress-variant-#{@page_variant}")
   .row
     center
       = image_tag("#{asset_path}/header.png", class: "landing-page-header")
@@ -13,7 +13,7 @@
     = image_tag("#{asset_path}/tip2.png", class: "landing-page-tip2-variant-#{@page_variant}")
   .row
     - link = '//www.fameandpartners.com/mystyle?lpi=insta1&pids%5B%5D=493-dusty-pink&pids%5B%5D=587-white&pids%5B%5D=566-burgundy&pids%5B%5D=493-ice-blue&pids%5B%5D=479-pink-azalea-floral&pids%5B%5D=493-black&pids%5B%5D=495-white&pids%5B%5D=575-surreal-floral-white&pids%5B%5D=582-merlot&pids%5B%5D=573-black&pids%5B%5D=599-monochrome&pids%5B%5D=508-white&pids%5B%5D=580-ice-blue&pids%5B%5D=602-watercolour&pids%5B%5D=493-ice-blue&pids%5B%5D=493-black'
-    = link_to image_tag("#{asset_path}/shopthislook.png",class: "shopthislook"), link
+    = link_to image_tag("#{asset_path}/campaign1.png",class: "shopthislook"), link
   .row
     = image_tag("#{asset_path}/tip3.png", class: "landing-page-tip3")
 
@@ -30,7 +30,7 @@
     = image_tag("#{asset_path}/tip4.png", class: "landing-page-tip4")
   .row
     - link = '//fameandpartners.com/mystyle?lpi=insta2a&pids[]=566-burgundy&pids[]=493-dusty-pink&pids[]=587-white&pids[]=566-blush&pids[]=479-pink-azalea-floral&pids[]=495-white&pids[]=575-surreal-floral-white&pids[]=582-merlot&pids[]=573-black&pids[]=599-monochrome&pids[]=508-white&pids[]=580-ice-blue&pids[]=602-watercolour&pids[]=566-blush'
-    = link_to image_tag("#{asset_path}/getthislook.jpg", class: "landing-page-getthislook"), link
+    = link_to image_tag("#{asset_path}/campaign2.jpg", class: "landing-page-getthislook"), link
   .row
     center
       = image_tag("#{asset_path}/myfavouritedresses.jpg", class: "landing-page-myfavouritedresses")
@@ -43,7 +43,10 @@
         = render partial: 'product_simple', locals: {:product => right_p}
 
   .row
-    = link_to image_tag("#{asset_path}/bohemium.jpg"), "http://www.fameandpartners.com/lookbook/bohemian-summer", class: "landing-page-bohemium"
+    = link_to image_tag("#{asset_path}/shopalldresses.jpg"), "//www.fameandpartners.com/lookbook/dresses", class: "landing-page-bohemium"
+
+  .row
+    = link_to image_tag("#{asset_path}/collection.jpg"), "//www.fameandpartners.com/lookbook/bohemian-summer", class: "landing-page-bohemium"
 
   .row
     p.text-center style="padding:20px"
