--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -1,3 +1,5 @@
+= render :partial => 'modals/modal_20150724_instagram_notify'
+
 - asset_path = "//#{configatron.asset_host}/pages/instagram/#{@page_variant}"
 
 .container-fluid#instagram-landing-201507
