fix links for page 1 and page 2

--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -14,8 +14,7 @@
   .row
     = image_tag("#{asset_path}/tip2.png", class: "landing-page-tip2-variant-#{@page_variant}")
   .row
-    - link = 'http://www.fameandpartners.com/mystyle?lpi=insta1&pids%5B%5D=493-dusty-pink&pids%5B%5D=587-white&pids%5B%5D=566-burgundy&pids%5B%5D=493-ice-blue&pids%5B%5D=479-pink-azalea-floral&pids%5B%5D=493-black&pids%5B%5D=495-white&pids%5B%5D=575-surreal-floral-white&pids%5B%5D=582-merlot&pids%5B%5D=573-black&pids%5B%5D=599-monochrome&pids%5B%5D=508-white&pids%5B%5D=580-ice-blue&pids%5B%5D=602-watercolour&pids%5B%5D=493-ice-blue&pids%5B%5D=493-black'
-    = link_to image_tag("#{asset_path}/campaign1.png",class: "shopthislook"), link
+    = link_to image_tag("#{asset_path}/campaign1.png",class: "shopthislook"), @campaign_link1
   .row
     = image_tag("#{asset_path}/tip3.png", class: "landing-page-tip3")
 
@@ -31,8 +30,7 @@
   .row
     = image_tag("#{asset_path}/tip4.png", class: "landing-page-tip4")
   .row
-    - link = 'http://fameandpartners.com/mystyle?lpi=insta2a&pids[]=566-burgundy&pids[]=493-dusty-pink&pids[]=587-white&pids[]=566-blush&pids[]=479-pink-azalea-floral&pids[]=495-white&pids[]=575-surreal-floral-white&pids[]=582-merlot&pids[]=573-black&pids[]=599-monochrome&pids[]=508-white&pids[]=580-ice-blue&pids[]=602-watercolour&pids[]=566-blush'
-    = link_to image_tag("#{asset_path}/campaign2.jpg", class: "landing-page-getthislook"), link
+    = link_to image_tag("#{asset_path}/campaign2.jpg", class: "landing-page-getthislook"), @campaign_link2
   .row
     center
       = image_tag("#{asset_path}/myfavouritedresses.jpg", class: "landing-page-myfavouritedresses")
@@ -49,7 +47,7 @@
       = link_to image_tag("#{asset_path}/shopalldresses.jpg"), "http://www.fameandpartners.com/lookbook/dresses", class: "landing-page-bohemium"
 
   .row
-    = link_to image_tag("#{asset_path}/collection.jpg"), "http://www.fameandpartners.com/lookbook/bohemian-summer", class: "landing-page-bohemium"
+    = link_to image_tag("#{asset_path}/collection.jpg"), @bottom_collection_link, class: "landing-page-bohemium"
 
   .row
     p.text-center style="padding:20px"
