--- a/app/assets/transient_content/20150724_instagram/stylesheets/20150724-instagram-landing-page-mobile.css.scss
+++ b/app/assets/transient_content/20150724_instagram/stylesheets/20150724-instagram-landing-page-mobile.css.scss
@@ -55,6 +55,24 @@
     }
   }
 
+  .landing-page-tip1-variant-3 {
+    padding-top:    40px;
+    padding-bottom: 40px;
+    padding-left:   15px;
+    @media(max-width: 320px) {
+      width: 230px;
+    }
+    @media(min-width: 321px) and(max-width: 599px) {
+      width: 275px;
+    }
+    @media(min-width: 600px) and(max-width: 767px) {
+      width: 440px;
+    }
+    @media(min-width: 768px) {
+      width: 595px;
+    }
+  }
+
   .landing-page-tip2-variant-1 {
     padding-top:    40px;
     padding-bottom: 40px;
@@ -88,6 +106,24 @@
     }
     @media(min-width: 768px) {
       width: 650px;
+    }
+  }
+
+  .landing-page-tip2-variant-3 {
+    padding-top:    40px;
+    padding-bottom: 40px;
+    padding-left:   15px;
+    @media(max-width: 320px) {
+      width: 230px;
+    }
+    @media(min-width: 321px) and(max-width: 599px) {
+      width: 275px;
+    }
+    @media(min-width: 600px) and(max-width: 767px) {
+      width: 440px;
+    }
+    @media(min-width: 768px) {
+      width: 595px;
     }
   }
 
@@ -159,6 +195,43 @@
       margin-left: 535px;
       margin-top:  430px;
       width:       145px;
+    }
+  }
+
+  .holydress-variant-3 {
+    position:    absolute;
+    width:       80px;
+    margin-top:  255px;
+    margin-left: 270px;
+    @media(max-width: 320px) {
+      width:       95px;
+      margin-top:  265px;
+      margin-left: 210px;
+    }
+    @media(min-width: 321px) and(max-width: 413px) {
+      margin-top:  295px;
+      width:       110px;
+      margin-left: 250px;
+    }
+    @media(min-width: 414px) and(max-width: 599px) {
+      margin-top: 315px;
+      width: 130px;
+      margin-left: 265px;
+    }
+    @media(min-width: 600px) and(max-width: 767px) {
+      margin-left: 410px;
+      margin-top: 392px;
+      width: 165px;
+    }
+    @media(min-width: 768px) and(max-width: 799px) {
+      margin-left: 550px;
+      margin-top: 470px;
+      width: 200px;
+    }
+    @media(min-width: 800px) {
+      margin-left: 555px;
+      margin-top: 480px;
+      width: 225px;
     }
   }
 
