--- a/app/assets/transient_content/20150724_instagram/stylesheets/20150724-instagram-landing-page-mobile.css.scss
+++ b/app/assets/transient_content/20150724_instagram/stylesheets/20150724-instagram-landing-page-mobile.css.scss
@@ -38,8 +38,8 @@
     }
   }
   .landing-page-tip1-variant-2 {
-    padding-top:    40px;
-    padding-bottom: 40px;
+    padding-top:    20px;
+    padding-bottom: 20px;
     padding-left:   15px;
     @media(max-width: 320px) {
       width: 300px;
@@ -56,8 +56,8 @@
   }
 
   .landing-page-tip1-variant-3 {
-    padding-top:    40px;
-    padding-bottom: 40px;
+    padding-top:    20px;
+    padding-bottom: px;
     padding-left:   15px;
     @media(max-width: 320px) {
       width: 230px;
@@ -92,8 +92,8 @@
   }
 
   .landing-page-tip2-variant-2 {
-    padding-top:    40px;
-    padding-bottom: 40px;
+    padding-top:    20px;
+    padding-bottom: 20px;
     padding-left:   15px;
     @media(max-width: 320px) {
       width: 300px;
@@ -110,8 +110,8 @@
   }
 
   .landing-page-tip2-variant-3 {
-    padding-top:    40px;
-    padding-bottom: 40px;
+    padding-top:    20px;
+    padding-bottom: 20px;
     padding-left:   15px;
     @media(max-width: 320px) {
       width: 230px;
@@ -163,38 +163,38 @@
 
   .holydress-variant-2 {
     position:    absolute;
-    width:       80px;
+    width:       70px;
     margin-top:  255px;
     margin-left: 270px;
     @media(max-width: 320px) {
-      width:       80px;
+      width:       70px;
       margin-top:  240px;
       margin-left: 210px;
     }
     @media(min-width: 321px) and(max-width: 413px) {
       margin-top:  260px;
-      width:       95px;
+      width:       75px;
       margin-left: 250px;
     }
     @media(min-width: 414px) and(max-width: 599px) {
       margin-top:  270px;
-      width:       100px;
+      width:       80px;
       margin-left: 265px;
     }
     @media(min-width: 600px) and(max-width: 767px) {
       margin-left: 410px;
       margin-top:  350px;
-      width:       130px;
+      width:       105px;
     }
     @media(min-width: 768px) and(max-width: 799px) {
       margin-left: 520px;
       margin-top:  430px;
-      width:       140px;
+      width:       120px;
     }
     @media(min-width: 800px) {
       margin-left: 535px;
       margin-top:  430px;
-      width:       145px;
+      width:       125px;
     }
   }
 
@@ -204,34 +204,34 @@
     margin-top:  255px;
     margin-left: 270px;
     @media(max-width: 320px) {
-      width:       95px;
-      margin-top:  265px;
-      margin-left: 210px;
+      width: 70px;
+      margin-top: 265px;
+      margin-left: 220px;
     }
     @media(min-width: 321px) and(max-width: 413px) {
-      margin-top:  295px;
-      width:       110px;
-      margin-left: 250px;
+      margin-top: 285px;
+      width: 85px;
+      margin-left: 260px;
     }
     @media(min-width: 414px) and(max-width: 599px) {
-      margin-top: 315px;
-      width: 130px;
-      margin-left: 265px;
+      margin-top: 290px;
+      width: 90px;
+      margin-left: 275px;
     }
     @media(min-width: 600px) and(max-width: 767px) {
-      margin-left: 410px;
+      margin-left: 430px;
       margin-top: 392px;
-      width: 165px;
+      width: 115px;
     }
     @media(min-width: 768px) and(max-width: 799px) {
-      margin-left: 550px;
+      margin-left: 570px;
       margin-top: 470px;
-      width: 200px;
+      width: 160px;
     }
     @media(min-width: 800px) {
-      margin-left: 555px;
+      margin-left: 570px;
       margin-top: 480px;
-      width: 225px;
+      width: 160px;
     }
   }
 
