--- a/app/views/spree/shared/_customerio.html.erb
+++ b/app/views/spree/shared/_customerio.html.erb
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-  _cio.track('purchased', <%= raw Marketing::CustomerIOTracker.new(@spree_order, current_site_version).order_data.to_json %>);
+  _cio.track('purchased', <%= raw Marketing::CustomerIOOrderPresenter.new(@spree_order, current_site_version).order_data.to_json %>);
 </script>
