[feat] implement mobile version locale selector

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1,6 +1,6 @@
-/////////// locale switcher //////////
+/////////// locale selector //////////
 
-@import 'redesign/header/locale_switcher';
+@import 'redesign/header/locale_selector';
 
 /////////// mega menu //////////
 
