--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -123,6 +123,8 @@ ruby:
               span.hidden-sm.hidden-xs.hidden-xxs cart:
               span#cart-item-count 0
 
+      = render 'layouts/redesign/header/locale_selector/mobile'
+
 #sideMenu
   nav.navbar.navbar-default.visible-xs.visible-sm
     .navbar-header
