--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -126,8 +126,7 @@ ruby:
         div#wantToShop
           | WANT TO SHOP 15% OFF LATER?
         div#emailPromoCodeButton
-          a.btn.btn-facebook.btn-black.btn-md
-            | EMAIL YOUR PROMO CODE
+          = link_to 'Email your promo code', fb_auth_path(email_reminder_promo: automatic_discount_code), class: 'btn btn-facebook btn-md'
     .banner-top#promoSent
       center
         | Your promo code has been sent to the email attached to your Facebook account. <b>ENJOY!</b>
