[fix] extract locale selector item to a template
[fix] spree configs stay at spree initializer

--- a/app/views/layouts/redesign/header/locale_selector/_desktop.html.slim
+++ b/app/views/layouts/redesign/header/locale_selector/_desktop.html.slim
@@ -2,12 +2,10 @@
   #locale-selector-label
     | You're shopping in:
   #locale-selector-current
-    = image_tag("flags/#{current_site_version.code}.png")
-    = current_site_version.name
+    = render 'layouts/redesign/header/locale_selector/item', site_version: current_site_version
     .arrow
     ul
       - SiteVersion.all.each do |site_version|
         li class=('active' if site_version == current_site_version)
           = link_to site_version_path(site_version.code) do
-            = image_tag("flags/#{site_version.code}.png")
-            = site_version.name
+            = render 'layouts/redesign/header/locale_selector/item', site_version: site_version
