--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -62,3 +62,13 @@
     top: 15rem;
   }
 }
+
+.auto-discount-applied {
+  @extend .alert-sale;
+  width:100%;
+  background-color: #000000;
+  padding: 5px;
+  p {
+    color: #ffffff;
+  }
+}
